<resources>
    <!--Select Category-->
    <string name="select_category">Select Category</string>
    <string name="category_1">Phones</string>
    <string name="category_2">Computer</string>
    <string name="category_3">Health</string>
    <string name="category_4">Books</string>
    <string name="category_5">Other</string>

    <string name="view_all">view all</string>
    <string name="see_more">see more</string>
    <string name="search_hint">Search</string>

    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="buy_now">Buy now!</string>
    <string name="hot_new">New</string>

    <!--Filter options-->
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="done">Done</string>
    <string-array name="filter_brand">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>
    <string-array name="filter_price">
        <item>$0 - $300</item>
        <item>$300 - $500</item>
        <item>$500 - $800</item>
        <item>$800 - $1000</item>
    </string-array>
    <string-array name="filter_size">
        <item>4.5 to 5.5 inches</item>
    </string-array>

    <!--Test strings-->
    <string name="mock_size_string">4.5 to 5.5 inches</string>
    <string name="mock_location">Zihuatanejo, Gro</string>
    <string name="hot_title">Iphone 12</string>
    <string name="hot_description">Super. Mega. Rapido.</string>

    <!--Bottom navigation bar-->
    <string name="explorer">• Explorer</string>
    <string name="my_cart">My Cart</string>
    <string name="fav">Favourites</string>
    <string name="profile">Profile</string>

    <string name="cart_items_overflow">99+</string>
</resources>