<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_placeholder"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:src="@drawable/black_right_corner_rounds_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/is_new"
        style="@style/WhiteSmallText"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ellipse"
        android:gravity="center"
        android:text="@string/hot_new"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/WhiteTitleText"
        android:fontFamily="@font/mark_pro_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/hot_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/is_new"
        app:layout_constraintTop_toBottomOf="@+id/is_new" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/WhiteSmallText"
        android:fontFamily="@font/mark_pro_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:text="@string/hot_description"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        style="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@color/white"
        android:id="@+id/btn_buy"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:layout_gravity="bottom"
        android:text="@string/buy_now"
        android:textSize="12sp"
        android:fontFamily="@font/mark_pro_bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <TextView
        android:id="@+id/error_text"
        style="@style/TitleText"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Something went wrong! =/"
        app:layout_constraintBottom_toBottomOf="@id/image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>