<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="24dp"
    android:paddingStart="42dp"
    android:paddingEnd="34dp"
    android:background="@drawable/panel_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/dark_blue_btn_bg"
            android:src="@drawable/ic_cross"
            app:circularflow_radiusInDP="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/filer_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filer_title" />

        <TextView
            android:id="@+id/filer_title"
            style="@style/Title18Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/filter_options"
            android:fontFamily="@font/mark_pro_heavy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            style="@style/TextAppearance.MaterialComponents.Button"
            android:backgroundTint="@color/orange"
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:fontFamily="@font/mark_pro_heavy"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/filer_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filer_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_brand"
        style="@style/Title18Text"
        android:fontFamily="@font/mark_pro_heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/brand"
        app:layout_constraintStart_toStartOf="@+id/btn_close"
        app:layout_constraintTop_toBottomOf="@+id/filer_title" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/brand_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/white_ellipse"
        android:entries="@array/filter_brand"
        android:elevation="4dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_done"
        app:layout_constraintStart_toStartOf="@+id/tv_brand"
        app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/Title18Text"
        android:fontFamily="@font/mark_pro_heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="@+id/brand_spinner"
        app:layout_constraintTop_toBottomOf="@+id/brand_spinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/price_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/white_ellipse"
        android:entries="@array/filter_price"
        android:elevation="4dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="@+id/brand_spinner"
        app:layout_constraintStart_toStartOf="@+id/tv_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <TextView
        android:id="@+id/tv_size"
        style="@style/Title18Text"
        android:fontFamily="@font/mark_pro_heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="@+id/price_spinner"
        app:layout_constraintTop_toBottomOf="@+id/price_spinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/size_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/white_ellipse"
        android:entries="@array/filter_size"
        android:elevation="4dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintEnd_toEndOf="@+id/price_spinner"
        app:layout_constraintStart_toStartOf="@+id/tv_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_size" />

</LinearLayout>