<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steam_white"
    tools:context=".presentation.fragments.MainScreenFragment">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/location"/>

            <TextView
                style="@style/DarkBlueCommonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_regular"
                android:text="@string/mock_location"
                android:textSize="@dimen/common_text"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:src="@drawable/arrow_dawn"
                android:layout_marginStart="2dp"/>

            <ImageView
                android:id="@+id/filter"
                android:layout_width="12dp"
                android:layout_height="14dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_filter"
                android:layout_marginEnd="20dp"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_category"
                        style="@style/TitleText"
                        android:fontFamily="@font/mark_pro_heavy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_border"
                        android:text="@string/select_category"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_view_all"
                        style="@style/OrangeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mark_pro_regular"
                        android:layout_marginEnd="@dimen/margin_border"
                        android:text="@string/view_all"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_category"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/padding_cats"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@+id/tv_category"
                        tools:itemCount="10"
                        tools:listitem="@layout/category_item" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        style="@style/SearchView"
                        android:layout_width="0dp"
                        android:layout_height="34dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/white_ellipse"
                        android:queryHint="@string/search_hint"
                        app:defaultQueryHint="@string/search_hint"
                        app:iconifiedByDefault="false"
                        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                        app:layout_constraintStart_toStartOf="@+id/tv_category"
                        app:layout_constraintTop_toBottomOf="@+id/rv_categories"
                        app:queryHint="@string/search_hint"
                        app:submitBackground="@drawable/white_ellipse" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:background="@drawable/ellipse"
                        android:src="@drawable/ic_round_qr_code_24"
                        app:layout_constraintEnd_toEndOf="@+id/tv_view_all"
                        app:layout_constraintTop_toTopOf="@+id/searchView"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_hot"
                        style="@style/TitleText"
                        android:fontFamily="@font/mark_pro_heavy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_border"
                        android:text="@string/hot_sales"
                        app:layout_constraintStart_toStartOf="@+id/searchView"
                        app:layout_constraintTop_toBottomOf="@+id/searchView" />

                    <TextView
                        android:id="@+id/tv_see_more_hot"
                        style="@style/OrangeText"
                        android:fontFamily="@font/mark_pro_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_border"
                        android:text="@string/see_more"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_hot"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/hot_sales_view_pager"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/view_pager_height"
                        android:layout_marginTop="@dimen/margin_border"
                        app:layout_constraintEnd_toEndOf="@+id/tv_see_more_hot"
                        app:layout_constraintStart_toStartOf="@+id/tv_hot"
                        app:layout_constraintTop_toBottomOf="@+id/tv_hot" />

                    <TextView
                        android:id="@+id/tv_best"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mark_pro_heavy"
                        android:layout_marginTop="@dimen/margin_border"
                        android:text="@string/best_seller"
                        app:layout_constraintStart_toStartOf="@+id/searchView"
                        app:layout_constraintTop_toBottomOf="@+id/hot_sales_view_pager" />

                    <TextView
                        android:id="@+id/tv_see_more_best"
                        style="@style/OrangeText"
                        android:fontFamily="@font/mark_pro_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_border"
                        android:text="@string/see_more"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_best"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_best_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="@dimen/margin_border"
                    android:layout_marginBottom="28dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_see_more_best"
                    app:layout_constraintStart_toStartOf="@+id/tv_best"
                    app:layout_constraintTop_toBottomOf="@+id/tv_best"
                    app:spanCount="2"
                    tools:listitem="@layout/best_seller_item" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/bottom_navigation_bar"
            layout="@layout/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:behavior_draggable="true"
        app:behavior_hideable="false"
        app:behavior_peekHeight="28dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <include
            android:id="@+id/filter_bottom_sheet"
            layout="@layout/filter_bottom_sheet"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>